--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,22 @@
     <title>GigaStonks</title>
   </head>
 
-  <body></body>
+  <body>
+    <header class="navbar">
+      <div class="logo-text">GigaStonks</div>
+    </header>
+    <div class="landing-container">
+      <div class="hero-area">
+        <h1 class="hero-heading"><span>Stock Data.</span><span>For You.</span></h1>
+        <input type="text" name="" id="searchInput">
+      </div>
+      <div class="bottom-area">
+        <div class="card-area">
+          <div class="preview-card"></div>
+          <div class="preview-card"></div>
+          <div class="preview-card"></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
