Add pointer animation

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,10 @@
     </header>
     <div class="landing-container">
       <div class="hero-area">
-        <h1 class="hero-heading"><span>Stock Data.</span><span>For You.</span></h1>
-        <input type="text" name="" id="searchInput">
+        <h1 class="hero-heading">
+          <span>Stock Data.</span><span>For You.</span>
+        </h1>
+        <input type="text" name="" id="searchInput" />
       </div>
       <div class="bottom-area">
         <div class="card-area">
@@ -23,5 +25,7 @@
         </div>
       </div>
     </div>
+    <div id="blur-layer"></div>
+    <div id="bg-blob"></div>
   </body>
 </html>
