Modify search bar

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
       </div>
       <div class="bottom-area">
         <div class="card-area">
+          <div class="preview-card btc"></div>
           <div class="preview-card"></div>
-          <div class="preview-card"></div>
-          <div class="preview-card"></div>
+          <div class="preview-card nifty"></div>
         </div>
       </div>
     </div>
